src/test/deca/syntax/valid/decaObjet/emptyClass/01assignation.deca
class A {
    
}
{
    A a = new A();
    B b = a;
}