src/test/deca/syntax/invalid/decaObjet/cast/04null.deca
class A {
    int x = 1;
    void affiche() {
        println("Je suis un A");
    }
}

class B extends A {
    int x = 2;
    void affiche() {
        println("Je suis un B");
    }
}

{
    B b = new B();
    (null)(b);
}